Add h1 and description

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Survey Form</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="title">Help us improve!</h1>
+    <p id="description">Thank you for taking the time in giving us feedback!</p>
+    <form id="survey-form" action=""></form>
+  </body>
 </html>
