--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1 id="title">Help us improve!</h1>
     <p id="description">Thank you for taking the time in giving us feedback!</p>
-    <form id="survey-form" action=""></form>
+    <form id="survey-form" action="">
+      <input id="name" type="text" required />
+      <input id="email" type="email" required />
+      <input id="number" type="number" />
+    </form>
   </body>
 </html>
