--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
         >Full name<input
           id="name"
           type="text"
-          placeholder="Name Surname"
+          placeholder="Enter your full name"
           required
       /></label>
       <label id="email-label" for="email"
         >Email<input
           id="email"
           type="email"
-          placeholder="email@domain.xyz"
+          placeholder="Enter your full email address"
           required
       /></label>
       <label id="number-label" for="number"
-        >Age (optional)<input id="number" type="number" min="5" max="120"
+        >Age (optional)<input
+          id="number"
+          type="number"
+          min="5"
+          max="120"
+          placeholder="Age"
       /></label>
     </form>
   </body>
