Add dropdown selector and options

--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
           max="120"
           placeholder="Age"
       /></label>
+      <label for="dropdown"
+        >What is you current employment status?
+        <select name="" id="dropdown">
+          <option value="">--Pick one--</option>
+          <option value="unemployed">Unemployed</option>
+          <option value="student">Student</option>
+          <option value="part-time">Part-time</option>
+          <option value="full-time">Full-time</option>
+          <option value="freelance">Freelance</option>
+          <option value="business-owner">Business owner</option>
+          <option value="prefer-not">Prefer not to say</option>
+        </select>
+      </label>
     </form>
   </body>
 </html>
