Add radio buttons

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
           <option value="prefer-not">Prefer not to say</option>
         </select>
       </label>
+      <p>Would you recommend us to a friend?</p>
+      <label for="radio-no"
+        >No
+        <input id="radio-no" name="recommendation" value="no" type="radio" />
+      </label>
+      <label for="radio-yes"
+        >Yes
+        <input id="radio-yes" name="recommendation" value="yes" type="radio" />
+      </label>
     </form>
   </body>
 </html>
