--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
         >Yes
         <input id="radio-yes" name="recommendation" value="yes" type="radio" />
       </label>
+      <p>
+        What aspects on our platform do you believe need to be improved on?
+        (Check all that apply)
+      </p>
+      <label for="appearance">
+        <input id="appearance" value="appearance" type="checkbox" />
+        Appearance
+      </label>
+      <label for="performance">
+        <input id="performance" value="performance" type="checkbox" />
+        Performance
+      </label>
+      <label for="pricing">
+        <input id="pricing" value="pricing" type="checkbox" />
+        Pricing
+      </label>
     </form>
   </body>
 </html>
