Add submit button

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         <input id="pricing" value="pricing" type="checkbox" />
         Pricing
       </label>
+      <p>Any comments or suggestions?</p>
+      <textarea
+        name="comments"
+        id="comments"
+        cols="50"
+        rows="5"
+        placeholder="Enter your comments here..."
+      ></textarea>
+      <button id="submit" type="submit">Submit</button>
     </form>
   </body>
 </html>
