--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
         </select>
       </label>
       <p>Would you recommend us to a friend?</p>
-      <label for="radio-no"
-        >No
-        <input id="radio-no" name="recommendation" value="no" type="radio" />
-      </label>
-      <label for="radio-yes"
-        >Yes
+      <label for="radio-yes">
         <input id="radio-yes" name="recommendation" value="yes" type="radio" />
+        Yes
+      </label>
+      <br />
+      <label for="radio-no">
+        <input id="radio-no" name="recommendation" value="no" type="radio" />
+        No
       </label>
       <p>
         What aspects on our platform do you believe need to be improved on?
