Finish up styling

--- a/index.html
+++ b/index.html
@@ -32,20 +32,19 @@
           max="120"
           placeholder="Age"
       /></label>
-      <label for="dropdown"
-        >What is you current employment status?
-        <select name="" id="dropdown">
-          <option value="">--Pick one--</option>
-          <option value="unemployed">Unemployed</option>
-          <option value="student">Student</option>
-          <option value="part-time">Part-time</option>
-          <option value="full-time">Full-time</option>
-          <option value="freelance">Freelance</option>
-          <option value="business-owner">Business owner</option>
-          <option value="prefer-not">Prefer not to say</option>
-        </select>
-      </label>
+      <p>What is you current employment status?</p>
+      <select name="" id="dropdown">
+        <option value="">--Pick one--</option>
+        <option value="unemployed">Unemployed</option>
+        <option value="student">Student</option>
+        <option value="part-time">Part-time</option>
+        <option value="full-time">Full-time</option>
+        <option value="freelance">Freelance</option>
+        <option value="business-owner">Business owner</option>
+        <option value="prefer-not">Prefer not to say</option>
+      </select>
       <p>Would you recommend us to a friend?</p>
+
       <label for="radio-yes">
         <input id="radio-yes" name="recommendation" value="yes" type="radio" />
         Yes
@@ -59,6 +58,7 @@
         What aspects on our platform do you believe need to be improved on?
         (Check all that apply)
       </p>
+
       <label for="appearance">
         <input id="appearance" value="appearance" type="checkbox" />
         Appearance
@@ -78,7 +78,7 @@
         name="comments"
         id="comments"
         cols="50"
-        rows="5"
+        rows="6"
         placeholder="Enter your comments here..."
       ></textarea>
       <button id="submit" type="submit">Submit</button>
